feat: add header & add more font

--- a/assets/fonts/font.css
+++ b/assets/fonts/font.css
@@ -1,3 +1,5 @@
+@import url('../css/variable.css');
+
 @font-face {
   font-family: 'GroteskBold';
   src: 
@@ -26,9 +28,11 @@
 /*---   bold    ---*/
 
 .text-bold-150{
-    font-family: 'GroteskDemi', sans;
+    font-family: 'GroteskBold', sans;
     font-size: 9.375em;
     text-decoration: none;
+    color: var(--text-color, #fff); 
+    margin: 0;
 }
 
 
@@ -36,29 +40,37 @@
 /*---   medium    ---*/
 
 .text-medium-36{
-    font-family: 'GroteskDemi', sans;
+    font-family: 'GroteskMedium', sans;
     font-size: 2.25em;
     text-decoration: none;
+    color: var(--text-color, #fff);  
+    margin: 0;
 }
 
 .text-medium-30-l5{
-    font-family: 'GroteskDemi', sans;
+    font-family: 'GroteskMedium', sans;
     font-size: 1.875em;
     text-decoration: none;
     letter-spacing: 0.09375em; /*5%*/
+    color: var(--text-color, #fff); 
+    margin: 0;
 }
 
 .text-medium-30{
-    font-family: 'GroteskDemi', sans;
+    font-family: 'GroteskMedium', sans;
     font-size: 1.875em;
     text-decoration: none;
+    color: var(--text-color, #fff); 
+    margin: 0;
 }
 
 .text-medium-20{
-    font-family: 'GroteskDemi', sans;
+    font-family: 'GroteskMedium', sans;
     font-size: 1.25em;
     text-decoration: none;
     letter-spacing: 0.09375em; /*5%*/
+    color: var(--text-color, #fff); 
+    margin: 0;
 }
 
 
@@ -69,6 +81,8 @@
     font-size: 3.25em;
     text-decoration: none;
     letter-spacing: 0.09375em; /*5%*/
+    color: var(--text-color, #fff); 
+    margin: 0;
 }
 
 .text-demi-s50-h70-l5{
@@ -77,6 +91,8 @@
     line-height: 4.375em;
     text-decoration: none;
     letter-spacing: 0.09375em; /*5%*/
+    color: var(--text-color, #fff); 
+    margin: 0;
 }
 
 .text-demi-32-l5{
@@ -84,6 +100,8 @@
     font-size: 2em;
     text-decoration: none;
     letter-spacing: 0.09375em; /*5%*/
+    color: var(--text-color, #fff); 
+    margin: 0;
 }
 
 .text-demi-30-l5{
@@ -91,6 +109,8 @@
     font-size: 1.875em;
     text-decoration: none;
     letter-spacing: 0.09375em; /*5%*/
+    color: var(--text-color, #fff); 
+    margin: 0;
 }
 
 .text-demi-s24-h30-l5{
@@ -99,6 +119,8 @@
     line-height: 1.875em;
     text-decoration: none;
     letter-spacing: 0.09375em; /*5%*/
+    color: var(--text-color, #fff); 
+    margin: 0;
 }
 
 .text-demi-24-l5{
@@ -106,6 +128,8 @@
     font-size: 1.5em;
     text-decoration: none;
     letter-spacing: 0.09375em; /*5%*/
+    color: var(--text-color, #fff); 
+    margin: 0;
 }
 
 .text-demi-22-l5{
@@ -113,6 +137,8 @@
     font-size: 1.375em;
     text-decoration: none;
     letter-spacing: 0.09375em; /*5%*/
+    color: var(--text-color, #fff); 
+    margin: 0;
 }
 
 .text-demi-s20-l5{
@@ -120,6 +146,8 @@
     font-size: 1.25em;
     text-decoration: none;
     letter-spacing: 0.09375em; /*5%*/
+    color: var(--text-color, #fff); 
+    margin: 0;
 }
 
 .text-demi-s20-h30-l5{
@@ -128,6 +156,8 @@
     line-height: 1.875em;
     text-decoration: none;
     letter-spacing: 0.09375em; /*5%*/
+    color: var(--text-color, #fff); 
+    margin: 0;
 }
 
 .text-demi-s18-h25-l5{
@@ -136,6 +166,8 @@
     line-height: 1.5625em;
     text-decoration: none;
     letter-spacing: 0.09375em; /*5%*/
+    color: var(--text-color, #fff); 
+    margin: 0;
 }
 
 .text-demi-s16-l5{
@@ -143,6 +175,8 @@
     font-size: 1em;
     text-decoration: none;
     letter-spacing: 0.09375em; /*5%*/
+    color: var(--text-color, #fff); 
+    margin: 0;
 }
 
 .text-demi-s16-h24-l5{
@@ -151,6 +185,8 @@
     line-height: 1.5em;
     text-decoration: none;
     letter-spacing: 0.09375em; /*5%*/
+    color: var(--text-color, #fff); 
+    margin: 0;
 }
 
 .text-demi-s14-l5{
@@ -158,6 +194,8 @@
     font-size: 0.875em;
     text-decoration: none;
     letter-spacing: 0.09375em; /*5%*/
+    color: var(--text-color, #fff); 
+    margin: 0;
 }
 
 .text-demi-s14-h20-l5{
@@ -166,4 +204,6 @@
     line-height: 1.25em;
     text-decoration: none;
     letter-spacing: 0.09375em; /*5%*/
+    color: var(--text-color, #fff); 
+    margin: 0;
 }
