--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,11 @@
 @import url('../assets/fonts/font.css');
+@import url('../css/variable.css');
+@import url('../css/components.css');
 
 body{
-    font-size: 16px;
+    font-size: var(--font-size-base);
+    background-color: var(--background);
+    color: var(--text-color);
+    margin: 0 auto;
+    padding: 0;
 }
