--- a/css/variable.css
+++ b/css/variable.css
@@ -4,5 +4,5 @@
     --background: #141414;
     --text-background: #FFFFFF;
     --text-color: #ffffff;
-    --help: #DB3138;
+    --help: #BE2B31;
 }
