--- a/css/components.css
+++ b/css/components.css
@@ -8,3 +8,19 @@
 .half:hover span{
     width: 100%;
 }
+
+.separators{
+    display: flex;
+    height: 15px;
+    gap: 35px;
+    width: fit-content;
+    border-color: blue;
+}
+
+.separators .separator{
+    background-color: var(--help);
+    display: flex;
+    height: 10px;
+    width: 10px;
+    transform: rotate(45deg);
+}
