--- a/css/components/header.css
+++ b/css/components/header.css
@@ -1,5 +1,6 @@
 header{
     min-height: 6.25em; /*100px*/
+    width: 100%;
     display: flex;
     align-items: center;
     padding: 0 100px;
@@ -16,6 +17,7 @@ nav{
 nav button{
     all: unset;
     margin-right: 40px;
+    min-height: 50px;
     display: flex;
     align-items: center;
     box-sizing: border-box;
@@ -26,6 +28,7 @@ nav button{
 nav button p{
     z-index: 1;
     padding-right: 17px;
+    line-height: 30px;
 }
 
 nav button span{
@@ -45,7 +48,7 @@ nav a:nth-of-type(5){
 .burger-menu{
     height: 25px;
     width: 45px;
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: end;
     gap: 8px;
@@ -71,6 +74,10 @@ nav a:nth-of-type(5){
     nav a:nth-of-type(1), a:nth-of-type(2), a:nth-of-type(3), a:nth-of-type(4){
        display: none;
     }
+
+    .burger-menu{
+        display: flex;
+    }
 }
 
 @media(max-width: 939px){
@@ -80,6 +87,10 @@ nav a:nth-of-type(5){
 }
 
 @media(max-width: 509px){
+    header{
+        padding: 0 30px
+    }
+
     nav a:nth-of-type(5){
         margin-left: 0;
     }
