--- a/css/components/header.css
+++ b/css/components/header.css
@@ -14,7 +14,7 @@ nav{
     gap: 30px;
 }
 
-nav button{
+nav a:nth-of-type(1){
     all: unset;
     margin-right: 40px;
     min-height: 50px;
@@ -23,15 +23,16 @@ nav button{
     box-sizing: border-box;
     padding: 10px 0 10px 25px;
     position: relative;
+    cursor: pointer;
 }
 
-nav button p{
+nav a:nth-of-type(1) p{
     z-index: 1;
     padding-right: 17px;
     line-height: 30px;
 }
 
-nav button span{
+nav a:nth-of-type(1) span{
     display: flex;
     position: absolute;
     height: 100%;
@@ -41,8 +42,9 @@ nav button span{
     left: 0;
 }
 
-nav a:nth-of-type(5){
-    margin-left: auto;
+nav >button{
+    all: unset;
+    margin-left: auto !important;
 }
 
 .burger-menu{
@@ -71,7 +73,7 @@ nav a:nth-of-type(5){
 }
 
 @media(max-width: 1039px){
-    nav a:nth-of-type(1), a:nth-of-type(2), a:nth-of-type(3), a:nth-of-type(4){
+    nav a:nth-of-type(2), a:nth-of-type(3), a:nth-of-type(4), a:nth-of-type(5){
        display: none;
     }
 
@@ -91,11 +93,11 @@ nav a:nth-of-type(5){
         padding: 0 30px
     }
 
-    nav a:nth-of-type(5){
-        margin-left: 0;
+    nav button{
+        margin-left: 0 !important;
     }
 
-    nav button{
+    nav a:nth-of-type(1){
        display: none;
     }
 }
