--- a/index.css
+++ b/index.css
@@ -2,6 +2,10 @@ header{
     position: absolute;
 }
 
+
+/*---   section     preview   ---*/
+
+
 .preview{
     height: 750px;
     width: 100%;
@@ -13,7 +17,7 @@ header{
     object-fit: cover;
 }
 
-.preview button{
+.preview a{
     all: unset;
     margin-right: 40px;
     min-height: 50px;
@@ -27,9 +31,10 @@ header{
     position: absolute;
     max-width: 290px;
     width: fit-content;
+    cursor: pointer;
 }
 
-.preview button p{
+.preview a p{
     z-index: 1;
     padding-right: 17px;
     line-height: 30px;
@@ -37,7 +42,7 @@ header{
     white-space: nowrap;
 }
 
-.preview button span{
+.preview a span{
     display: flex;
     position: absolute;
     height: 100%;
@@ -74,7 +79,7 @@ header{
     box-sizing: border-box;
     transform: translateX(-50%);
     position: absolute;
-    color: rgba(hexToRgb(var(--text-color)), 0.8);
+    opacity: 0.8;
 }
 
 @media(max-width: 768px){
@@ -98,7 +103,125 @@ header{
         top: 375px;
     }
 
-    .preview button{
+    .preview a{
         top: 518px;
+    }
+}
+
+
+/*---   section     steps   ---*/
+
+
+.steps{
+    display: flex;
+    gap: 50px;
+    box-sizing: border-box;
+    padding: 50px 100px 70px 100px;
+}
+
+.steps .steps-text{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    width: 100%;
+}
+
+.steps-text >p:nth-of-type(1){
+    text-transform: uppercase;
+}
+
+.steps-text >p:nth-of-type(2){
+    max-width: 580px;
+    opacity: 0.8;
+}
+
+
+.steps .steps-box{
+    max-width: 560px;
+    width: 100%;
+    display: flex;
+}
+
+.steps-box >div:nth-of-type(1){
+    padding-bottom: 30px;
+    order: 2;
+}
+
+.steps-box >div:nth-of-type(2){
+    padding-top: 30px;
+    order: 3;
+}
+
+.steps-box >div .container{
+    order: 1 ;
+}
+
+.steps-box >div .container{
+    display: flex;
+    flex-direction: column;
+    width: 280px;
+    min-height: 160px;
+    box-sizing: border-box;
+    padding: 20px 15px;
+    border: 1px solid var(--help-white);
+    align-items: center;
+    gap: 20px;
+}
+
+.steps-box >div .container .container-text{
+    display: flex;
+    align-items: end;
+}
+
+.steps-box >div .container .container-text >p{
+    color: var(--help);
+}
+
+.steps-box >div .container .container-text >p:nth-of-type(1){
+    margin-bottom: 4px;
+}
+
+.steps-box >div .container >p{
+    text-transform: uppercase;
+    text-align: center;
+}
+
+@media(max-width: 1227px){
+    .steps{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .steps .steps-text{
+        align-items: center;
+    }
+
+    .steps-text >p{
+        text-align: center;
+    }
+}
+
+@media(max-width: 939px){
+    .steps{
+        padding: 50px;
+        padding-bottom: 70px;
+    }
+}
+
+@media(max-width: 768px){
+    .steps-text >p:nth-of-type(1){
+        font-size: 2.875em;
+        line-height: calc(50/46);
+    }
+}
+
+@media(max-width: 659px){
+    .steps-box{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .steps-box >div:nth-of-type(1){
+        padding-bottom: 0px;
     }
 }
