--- a/css/components.css
+++ b/css/components.css
@@ -1,5 +1,6 @@
 @import url('../css/components/header.css');
-
+@import url('../css/components/separators.css');
+@import url('../css/components/paggination.css');
 
 .half span{
     transition: width 0.5s ease;
@@ -9,18 +10,3 @@
     width: 100%;
 }
 
-.separators{
-    display: flex;
-    height: 15px;
-    gap: 35px;
-    width: fit-content;
-    border-color: blue;
-}
-
-.separators .separator{
-    background-color: var(--help);
-    display: flex;
-    height: 10px;
-    width: 10px;
-    transform: rotate(45deg);
-}
