--- a/css/variable.css
+++ b/css/variable.css
@@ -3,7 +3,9 @@
 
     --background: #141414;
     --text-background: #FFFFFF;
+    --text-background-20: #ffffff33;
     --text-color: #ffffff;
+    --text-color-80: #ffffffcc;
     --help: #BE2B31;
     --help-white: #FFFFFF;
 }
