feat: add part section services & add script for fill separators

--- a/index.css
+++ b/index.css
@@ -325,3 +325,20 @@ header{
         max-width: 226px;
     }
 }
+
+
+/*---   section     services   ---*/
+
+
+
+.services{
+
+}
+
+.services-text{
+
+}
+
+.services-container{
+    
+}
