--- a/css/components.css
+++ b/css/components.css
@@ -2,6 +2,7 @@
 @import url('../css/components/separators.css');
 @import url('../css/components/paggination.css');
 @import url('../css/components/slider.css');
+@import url('../css/components/textSection.css');
 
 .half span{
     transition: width 0.5s ease;
