--- a/index.css
+++ b/index.css
@@ -3,7 +3,9 @@ header{
 }
 
 
+
 /*---   section     preview   ---*/
+
 
 
 .preview{
@@ -109,7 +111,9 @@ header{
 }
 
 
+
 /*---   section     steps   ---*/
+
 
 
 .steps{
@@ -227,7 +231,9 @@ header{
 }
 
 
+
 /*---   section     gallery   ---*/
+
 
 
 .gallery{
@@ -332,13 +338,104 @@ header{
 
 
 .services{
-
+    display: flex;
+    padding: 70px 100px;
+    flex-direction: column;
+    gap: 50px;
+    align-items: center;
+    overflow-x: hidden;
+    box-sizing: border-box;
 }
 
-.services-text{
+.services-text >p{
+    text-transform: uppercase;
+    text-align: center;
+}
 
+.services-filter{
+    display: flex;
+    gap: 15px 50px;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    width: fit-content;
+}
+
+.services-filter >button{
+    text-transform: uppercase;
+    box-sizing: border-box;
+    padding: 20px 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 10;
+}
+
+.services-filter .filter-background{
+    width: 170px;
+    height: 72px;
+    background-color: var(--help);
+    transition: all 0.3s ease;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 5;
+}
+
+.services-box{
+    display: flex;
+    gap: 50px;
+    width: 100%;
+    align-items: center;
 }
 
 .services-container{
-    
+    display: flex;
+    gap: 30px;
+    width: 100%;
+    justify-content: center;
+}
+
+.sbc-container{
+    height: 417px;
+    max-width: 300px;
+    padding: 70px 25px 50px 25px; 
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    box-sizing: border-box;
+    border: 1px solid var(--text-color-80);
+}
+
+.sbc-container >img{
+    height: 70px;
+    width: 70px;
+}
+
+.sbc-container >p:nth-of-type(1){
+    margin-top: 25px;
+    margin-bottom: 20px;
+}
+
+.sbc-container >p:nth-of-type(2){
+    margin-bottom: 25px;
+    max-width: 226px;
+}
+
+.sbc-container >p{
+    text-transform: uppercase;
+    text-align: center;
+}
+
+
+@media(max-width: 442px){
+    .services-filter{
+        flex-direction: column;
+    }
+
+    .services-filter .filter-background{
+        top: 0;
+        left: 10px;
+    }
 }
