--- a/css/variable.css
+++ b/css/variable.css
@@ -7,5 +7,6 @@
     --text-color: #ffffff;
     --text-color-80: #ffffffcc;
     --help: #BE2B31;
+    --help-20:#be2b3033;
     --help-white: #FFFFFF;
 }
