--- a/css/variable.css
+++ b/css/variable.css
@@ -6,6 +6,7 @@
     --text-background-20: #ffffff33;
     --text-color: #ffffff;
     --text-color-80: #ffffffcc;
+    --text-color-60: #ffffff99;
     --help: #BE2B31;
     --help-20:#be2b3033;
     --help-white: #FFFFFF;
