--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -6,6 +6,7 @@ footer{
     align-items: center;
     width: 100%;
     gap: 30px;
+    border-top: 1px solid var(--background-60);
 }
 
 footer >p{
