--- a/index.css
+++ b/index.css
@@ -420,6 +420,8 @@ header{
 .sbc-container >p:nth-of-type(2){
     margin-bottom: 25px;
     max-width: 226px;
+    height: 88px;
+    min-height: 88px;
 }
 
 .sbc-container >p{
