--- a/css/variable.css
+++ b/css/variable.css
@@ -3,6 +3,7 @@
 
     --background: #141414;
     --text-background: #FFFFFF;
+    --background-80: #ffffffcc;
     --background-60: #999999;
     --text-background-20: #ffffff33;
     --text-color: #ffffff;
