--- a/pages/gallery/gallery.css
+++ b/pages/gallery/gallery.css
@@ -104,6 +104,7 @@
 .feedback-box{
     display: flex;
     gap: 50px;
+    align-items: center;
 }
 
 .feedback-container{
@@ -112,4 +113,75 @@
     gap: 30px;
     align-items: center;
     justify-content: center;
+    transition: all 0.5s ease;
+}
+
+/*no active card*/
+
+.feedbak-card{
+    border: 1px solid var(--background-80);
+    box-sizing: border-box;
+    height: 340px;
+    width: 260px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    opacity: 0.6;
+    transition: all 0.5s ease-out;
+    padding: 70px 20px 30px 20px;
+}
+
+.feedback-card-person{
+    box-sizing: border-box;
+    height: 50px;
+    width: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid var(--help);
+    margin-bottom: 25px;
+}
+
+.feedback-card-person >img{
+    height: 15px;
+    width: 15px;
+    object-fit: cover;
+}
+
+.feedbak-card >p{
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.feedbak-card >p:nth-of-type(2){
+    margin: 10px 0 20px 0;
+    color: var(--text-color-60);
+}
+
+/*active card*/
+
+.feedbak-card.active{
+    opacity: 1;
+    height: 390px;
+    width: 300px;
+}
+
+.feedbak-card.active .feedback-card-person{
+    height: 70px;
+    width: 70px;
+}
+
+.feedbak-card.active .feedback-card-person >img{
+    height: 25px;
+    width: 25px;
+}
+
+.feedbak-card.active >p:nth-of-type(1){
+    font-size: 1.5em;
+    line-height: 1;
+}
+
+.feedbak-card.active >p:nth-of-type(3){
+    font-size: 1em;
+    line-height: 140%;
 }
