feat: add adaptive for last section (without select)

--- a/css/components/question.css
+++ b/css/components/question.css
@@ -54,20 +54,21 @@
     width: 20px;
 }
 
-.question-box >div >button{
+.question-box >div >button, .request-service-box-buttons >button{
     padding: 10px 20px;
     box-sizing: border-box;
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
+    min-height: 63px;
 }
 
-.question-box >div >button >p{
+.question-box >div >button >p, .request-service-box-buttons >button >p{
     z-index: 10;
 }
 
-.question-box >div >button >span{
+.question-box >div >button >span, .request-service-box-buttons >button >span{
     width: 55%;
     background-color: var(--help);
     position: absolute;
