--- a/assets/fonts/font.css
+++ b/assets/fonts/font.css
@@ -141,8 +141,7 @@
 .text-demi-s24-h30-l5{
     font-family: 'GroteskDemi', sans;
     font-size: 1.5em;
-
-    line-height: 1.875em;
+    line-height: 1.25;
     text-decoration: none;
     letter-spacing: 0.05em; /*5%*/
     color: var(--text-color, #fff); 
