--- a/css/components/textSection.css
+++ b/css/components/textSection.css
@@ -9,3 +9,10 @@
     text-transform: uppercase;
     text-align: center;
 }
+
+@media(max-width: 768px){
+    .text-section >p:nth-of-type(1){
+        font-size: 2.875em;
+        line-height: calc(50/46);
+    }
+}
