--- a/css/components/filter.css
+++ b/css/components/filter.css
@@ -27,6 +27,7 @@
     opacity: 0.6;
     justify-content: space-between;
     transition: all 0.3s ease-out;
+    z-index: 1000;
 }
 
 .select >p{
@@ -43,15 +44,25 @@
 
 .select-option{
     display: none;
+    flex-direction: column;
     position: absolute;
     width: 100%;
     left: 0;
     top: 56px;
     max-height: 300px;
-    background-color: red;
+    background-color: var(--background);
+    border: 1px solid var(--help);
     box-sizing: border-box;
-    padding: 15px 30px;
-    z-index: 100;
+    padding: 15px 15px;
+    z-index: 10000;
+}
+
+.option{
+    padding: 10px 15px;
+}
+
+.option:hover{
+    background-color: var(--text-background-20);
 }
 
 /*      ---     select hover    ---     */
@@ -69,3 +80,6 @@
     transform: rotate(-270deg);
 }
 
+.select.active .select-option{
+    display: flex;
+}
