--- a/pages/services/services.css
+++ b/pages/services/services.css
@@ -54,6 +54,14 @@
     justify-content: center;
 }
 
+.filter-section >.filter-box:nth-of-type(2){
+    z-index: 100;
+}
+
+.filter-section >.filter-box:nth-of-type(3){
+    z-index: 90;
+}
+
 .custom-input{
     display: flex;
     gap: 15px;
@@ -85,6 +93,7 @@
 
 .custom-input >input::placeholder{
     text-transform: uppercase;
+    color: var(--text-color); 
 }
 
 .custom-input >img:nth-of-type(1){
@@ -117,13 +126,20 @@
 /*--service-box*/
 
 .services-box{
-    height: 430px;
+    max-height: 430px;
+    min-height: 150px;
     width: 100%;
     display: flex;
     flex-direction: column;
     gap: 15px;
-    background-color: blue;
     overflow-y: auto;
+    scrollbar-color: var(--help) transparent;
+}
+
+.no-services-message {
+    text-align: center;
+    margin: auto;
+    color: var(--help)
 }
 
 .container-service{
@@ -132,7 +148,7 @@
     gap: 0 30px;
     align-items: center;
     box-sizing: border-box;
-    padding: 15px 50px 25px 50px;
+    padding: 15px 50px 15px 50px;
     transition: all 0.3s ease-out;
 }
 
@@ -142,6 +158,7 @@
 
 .container-service.active{
     background-color: var(--text-background-20);
+    padding-bottom: 25px;
 }
 
 .container-service >img{
@@ -222,6 +239,10 @@
 
     .price, .name-service{
         font-size: 1.25em;
+    }
+
+    .name-service{
+        width: calc(100% - 65px);
     }
 
     .price{
